// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`accountSettings > should render correctly for operator 1`] = `
[
  <div
    className="app-phase-banner__wrapper"
  >
    <div
      className="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        className="govuk-phase-banner__content"
      >
        <strong
          className="govuk-tag govuk-phase-banner__content__tag"
        >
          beta
        </strong>
        <span
          className="govuk-phase-banner__text"
        >
          This is a new service – your
           
          <a
            className="govuk-link"
            href="/feedback"
            id="feedback-link"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            feedback
          </a>
           
          will help us to improve it.
        </span>
      </p>
    </div>
  </div>,
  <div
    className="govuk-width-container"
  >
    <button
      className="govuk-back-link mb-7"
      onClick={[Function]}
      type="button"
    >
      Back
    </button>
    <main
      className="govuk-main-wrapper"
      id="main-content"
    >
      <div
        className="govuk-grid-row"
      >
        <div
          className="govuk-grid-column-two-thirds"
        >
          <div
            className="govuk-form-group"
          >
            <h1
              className="govuk-heading-l"
            >
              Account settings
            </h1>
            <table
              className="govuk-table"
            >
              <thead
                className="govuk-table__head"
              >
                <tr
                  className="govuk-table__row"
                />
              </thead>
              <tbody
                className="govuk-table__body"
              >
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle"
                    scope="row"
                  >
                    Email address
                  </th>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  >
                    test@example.com
                  </td>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                </tr>
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle"
                    scope="row"
                  >
                    Operator name
                  </th>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  >
                    add-op
                  </td>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                </tr>
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle"
                    scope="row"
                  >
                    Password
                  </th>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  >
                    <input
                      className="bg-white"
                      disabled={true}
                      id="password"
                      name="password"
                      type="password"
                      value="myPassword"
                    />
                  </td>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  >
                    <a
                      className="govuk-link"
                      href="/change-password"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onTouchStart={[Function]}
                    >
                      Change
                    </a>
                  </td>
                </tr>
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle"
                    scope="row"
                  >
                    Organisation
                  </th>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  >
                    Test Org
                  </td>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                </tr>
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle"
                    scope="row"
                  >
                    NaPTAN Adminarea
                  </th>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                </tr>
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle"
                    scope="row"
                  >
                    NOC Code
                  </th>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  >
                    WRAY, CPTR, MOXN
                  </td>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                </tr>
              </tbody>
            </table>
            <div
              className="mb-12"
            />
          </div>
        </div>
      </div>
    </main>
    <div>
      <h2
        className="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        className="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link:
         
        <a
          className="govuk-link govuk-!-font-size-19"
          href="/contact"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          Contact us
        </a>
      </p>
    </div>
  </div>,
  <footer
    className="govuk-footer"
    role="contentinfo"
  >
    <div
      className="govuk-width-container"
    >
      <div
        className="govuk-footer__meta"
      >
        <div
          className="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            className="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            className="govuk-footer__inline-list"
          >
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Help
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/cookies"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Cookies
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Contact
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/accessibility"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Accessibility
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Terms and conditions
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/privacy"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            className="govuk-footer__body"
          >
            Built by the
             
            <a
              className="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            className="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            className="govuk-footer__licence-description"
          >
            All content is available under the
             
            <a
              className="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          className="govuk-footer__meta-item"
        >
          <a
            className="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>,
]
`;

exports[`accountSettings > should render correctly for organisation admin 1`] = `
[
  <div
    className="app-phase-banner__wrapper"
  >
    <div
      className="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        className="govuk-phase-banner__content"
      >
        <strong
          className="govuk-tag govuk-phase-banner__content__tag"
        >
          beta
        </strong>
        <span
          className="govuk-phase-banner__text"
        >
          This is a new service – your
           
          <a
            className="govuk-link"
            href="/feedback"
            id="feedback-link"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            feedback
          </a>
           
          will help us to improve it.
        </span>
      </p>
    </div>
  </div>,
  <div
    className="govuk-width-container"
  >
    <button
      className="govuk-back-link mb-7"
      onClick={[Function]}
      type="button"
    >
      Back
    </button>
    <main
      className="govuk-main-wrapper"
      id="main-content"
    >
      <div
        className="govuk-grid-row"
      >
        <div
          className="govuk-grid-column-two-thirds"
        >
          <div
            className="govuk-form-group"
          >
            <h1
              className="govuk-heading-l"
            >
              Account settings
            </h1>
            <table
              className="govuk-table"
            >
              <thead
                className="govuk-table__head"
              >
                <tr
                  className="govuk-table__row"
                />
              </thead>
              <tbody
                className="govuk-table__body"
              >
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle"
                    scope="row"
                  >
                    Email address
                  </th>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  >
                    test@example.com
                  </td>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                </tr>
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle"
                    scope="row"
                  >
                    Password
                  </th>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  >
                    <input
                      className="bg-white"
                      disabled={true}
                      id="password"
                      name="password"
                      type="password"
                      value="myPassword"
                    />
                  </td>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  >
                    <a
                      className="govuk-link"
                      href="/change-password"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onTouchStart={[Function]}
                    >
                      Change
                    </a>
                  </td>
                </tr>
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle"
                    scope="row"
                  >
                    Organisation
                  </th>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  >
                    Test Org
                  </td>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                </tr>
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle"
                    scope="row"
                  >
                    NaPTAN Adminarea
                  </th>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                </tr>
              </tbody>
            </table>
            <div
              className="mb-12"
            >
              <h2
                className="govuk-heading-m"
              >
                Email Notifications
              </h2>
              <div
                className="govuk-form-group"
              >
                <div
                  className=""
                >
                  <div
                    className="flex flex-row items-center"
                  >
                    <p
                      className="font-bold mr-28"
                    >
                      Street manager roadworks
                    </p>
                    <div
                      className="govuk-radios govuk-radios--inline ml-auto"
                      data-module="govuk-radios"
                    >
                      <div
                        className="govuk-radios__item"
                      >
                        <input
                          className="govuk-radios__input"
                          id="street-manager-notification-on"
                          name="street-manager-notification-on"
                          onChange={[Function]}
                          type="radio"
                          value="true"
                        />
                        <label
                          className="govuk-label govuk-radios__label"
                          htmlFor="street-manager-notification-on"
                        >
                          On
                        </label>
                      </div>
                      <div
                        className="govuk-radios__item"
                      >
                        <input
                          checked={true}
                          className="govuk-radios__input"
                          id="street-manager-notification-off"
                          name="street-manager-notification-off"
                          onChange={[Function]}
                          type="radio"
                          value="false"
                        />
                        <label
                          className="govuk-label govuk-radios__label"
                          htmlFor="street-manager-notification-off"
                        >
                          Off
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="govuk-form-group"
              >
                <div
                  className=""
                >
                  <div
                    className="flex flex-row items-center"
                  >
                    <p
                      className="font-bold mr-28"
                    >
                      Disruptions requiring approval
                    </p>
                    <div
                      className="govuk-radios govuk-radios--inline ml-auto"
                      data-module="govuk-radios"
                    >
                      <div
                        className="govuk-radios__item"
                      >
                        <input
                          className="govuk-radios__input"
                          id="disruption-approval-email-notification-on"
                          name="disruption-approval-email-notification-on"
                          onChange={[Function]}
                          type="radio"
                          value="true"
                        />
                        <label
                          className="govuk-label govuk-radios__label"
                          htmlFor="disruption-approval-email-notification-on"
                        >
                          On
                        </label>
                      </div>
                      <div
                        className="govuk-radios__item"
                      >
                        <input
                          checked={true}
                          className="govuk-radios__input"
                          id="disruption-approval-email-notification-off"
                          name="disruption-approval-email-notification-off"
                          onChange={[Function]}
                          type="radio"
                          value="false"
                        />
                        <label
                          className="govuk-label govuk-radios__label"
                          htmlFor="disruption-approval-email-notification-off"
                        >
                          Off
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <h2
              className="govuk-heading-m"
            >
              From which source shall we acquire your data
            </h2>
            <div
              className="govuk-form-group"
            >
              <div
                className=""
              >
                <table
                  className="govuk-table"
                >
                  <thead
                    className="govuk-table__head"
                  >
                    <tr
                      className="govuk-table__row"
                    />
                  </thead>
                  <tbody
                    className="govuk-table__body"
                  >
                    <tr
                      className="govuk-table__row"
                    >
                      <th
                        className="govuk-table__header align-middle"
                        scope="row"
                      >
                        Bus
                      </th>
                      <td
                        className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                      >
                        <div
                          className="govuk-radios govuk-radios--inline"
                          data-module="govuk-radios"
                        >
                          <div
                            className="govuk-radios__item"
                          >
                            <input
                              checked={false}
                              className="govuk-radios__input"
                              id="bus-tnds"
                              name="bus-group"
                              onChange={[Function]}
                              type="radio"
                              value="tnds"
                            />
                            <label
                              className="govuk-label govuk-radios__label"
                              htmlFor="bus-tnds"
                            >
                              TNDS
                            </label>
                          </div>
                          <div
                            className="govuk-radios__item"
                          >
                            <input
                              checked={true}
                              className="govuk-radios__input"
                              id="bus-bods"
                              name="bus-group"
                              onChange={[Function]}
                              type="radio"
                              value="bods"
                            />
                            <label
                              className="govuk-label govuk-radios__label"
                              htmlFor="bus-bods"
                            >
                              BODS
                            </label>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr
                      className="govuk-table__row"
                    >
                      <th
                        className="govuk-table__header align-middle"
                        scope="row"
                      >
                        Tram
                      </th>
                      <td
                        className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                      >
                        <div
                          className="govuk-radios govuk-radios--inline"
                          data-module="govuk-radios"
                        >
                          <div
                            className="govuk-radios__item"
                          >
                            <input
                              checked={true}
                              className="govuk-radios__input"
                              id="tram-tnds"
                              name="tram-group"
                              onChange={[Function]}
                              type="radio"
                              value="tnds"
                            />
                            <label
                              className="govuk-label govuk-radios__label"
                              htmlFor="tram-tnds"
                            >
                              TNDS
                            </label>
                          </div>
                          <div
                            className="govuk-radios__item"
                          >
                            <input
                              checked={false}
                              className="govuk-radios__input"
                              id="tram-bods"
                              name="tram-group"
                              onChange={[Function]}
                              type="radio"
                              value="bods"
                            />
                            <label
                              className="govuk-label govuk-radios__label"
                              htmlFor="tram-bods"
                            >
                              BODS
                            </label>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr
                      className="govuk-table__row"
                    >
                      <th
                        className="govuk-table__header align-middle"
                        scope="row"
                      >
                        Ferry
                      </th>
                      <td
                        className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                      >
                        <div
                          className="govuk-radios govuk-radios--inline"
                          data-module="govuk-radios"
                        >
                          <div
                            className="govuk-radios__item"
                          >
                            <input
                              checked={true}
                              className="govuk-radios__input"
                              id="ferryService-tnds"
                              name="ferryService-group"
                              onChange={[Function]}
                              type="radio"
                              value="tnds"
                            />
                            <label
                              className="govuk-label govuk-radios__label"
                              htmlFor="ferryService-tnds"
                            >
                              TNDS
                            </label>
                          </div>
                          <div
                            className="govuk-radios__item"
                          >
                            <input
                              checked={false}
                              className="govuk-radios__input"
                              id="ferryService-bods"
                              name="ferryService-group"
                              onChange={[Function]}
                              type="radio"
                              value="bods"
                            />
                            <label
                              className="govuk-label govuk-radios__label"
                              htmlFor="ferryService-bods"
                            >
                              BODS
                            </label>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr
                      className="govuk-table__row"
                    >
                      <th
                        className="govuk-table__header align-middle"
                        scope="row"
                      >
                        Rail
                      </th>
                      <td
                        className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                      >
                        <div
                          className="govuk-radios govuk-radios--inline"
                          data-module="govuk-radios"
                        >
                          <div
                            className="govuk-radios__item"
                          >
                            <input
                              checked={true}
                              className="govuk-radios__input"
                              id="rail-tnds"
                              name="rail-group"
                              onChange={[Function]}
                              type="radio"
                              value="tnds"
                            />
                            <label
                              className="govuk-label govuk-radios__label"
                              htmlFor="rail-tnds"
                            >
                              TNDS
                            </label>
                          </div>
                          <div
                            className="govuk-radios__item"
                          >
                            <input
                              checked={false}
                              className="govuk-radios__input"
                              id="rail-bods"
                              name="rail-group"
                              onChange={[Function]}
                              type="radio"
                              value="bods"
                            />
                            <label
                              className="govuk-label govuk-radios__label"
                              htmlFor="rail-bods"
                            >
                              BODS
                            </label>
                          </div>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <div>
      <h2
        className="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        className="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link:
         
        <a
          className="govuk-link govuk-!-font-size-19"
          href="/contact"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          Contact us
        </a>
      </p>
    </div>
  </div>,
  <footer
    className="govuk-footer"
    role="contentinfo"
  >
    <div
      className="govuk-width-container"
    >
      <div
        className="govuk-footer__meta"
      >
        <div
          className="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            className="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            className="govuk-footer__inline-list"
          >
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Help
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/cookies"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Cookies
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Contact
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/accessibility"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Accessibility
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Terms and conditions
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/privacy"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            className="govuk-footer__body"
          >
            Built by the
             
            <a
              className="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            className="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            className="govuk-footer__licence-description"
          >
            All content is available under the
             
            <a
              className="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          className="govuk-footer__meta-item"
        >
          <a
            className="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>,
]
`;

exports[`accountSettings > should render correctly for organisation admin and showUnderground is true 1`] = `
[
  <div
    className="app-phase-banner__wrapper"
  >
    <div
      className="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        className="govuk-phase-banner__content"
      >
        <strong
          className="govuk-tag govuk-phase-banner__content__tag"
        >
          beta
        </strong>
        <span
          className="govuk-phase-banner__text"
        >
          This is a new service – your
           
          <a
            className="govuk-link"
            href="/feedback"
            id="feedback-link"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            feedback
          </a>
           
          will help us to improve it.
        </span>
      </p>
    </div>
  </div>,
  <div
    className="govuk-width-container"
  >
    <button
      className="govuk-back-link mb-7"
      onClick={[Function]}
      type="button"
    >
      Back
    </button>
    <main
      className="govuk-main-wrapper"
      id="main-content"
    >
      <div
        className="govuk-grid-row"
      >
        <div
          className="govuk-grid-column-two-thirds"
        >
          <div
            className="govuk-form-group"
          >
            <h1
              className="govuk-heading-l"
            >
              Account settings
            </h1>
            <table
              className="govuk-table"
            >
              <thead
                className="govuk-table__head"
              >
                <tr
                  className="govuk-table__row"
                />
              </thead>
              <tbody
                className="govuk-table__body"
              >
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle"
                    scope="row"
                  >
                    Email address
                  </th>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  >
                    test@example.com
                  </td>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                </tr>
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle"
                    scope="row"
                  >
                    Password
                  </th>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  >
                    <input
                      className="bg-white"
                      disabled={true}
                      id="password"
                      name="password"
                      type="password"
                      value="myPassword"
                    />
                  </td>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  >
                    <a
                      className="govuk-link"
                      href="/change-password"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onTouchStart={[Function]}
                    >
                      Change
                    </a>
                  </td>
                </tr>
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle"
                    scope="row"
                  >
                    Organisation
                  </th>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  >
                    Test Org
                  </td>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                </tr>
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle"
                    scope="row"
                  >
                    NaPTAN Adminarea
                  </th>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  >
                    082, 147
                  </td>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                </tr>
              </tbody>
            </table>
            <div
              className="mb-12"
            >
              <h2
                className="govuk-heading-m"
              >
                Email Notifications
              </h2>
              <div
                className="govuk-form-group"
              >
                <div
                  className=""
                >
                  <div
                    className="flex flex-row items-center"
                  >
                    <p
                      className="font-bold mr-28"
                    >
                      Street manager roadworks
                    </p>
                    <div
                      className="govuk-radios govuk-radios--inline ml-auto"
                      data-module="govuk-radios"
                    >
                      <div
                        className="govuk-radios__item"
                      >
                        <input
                          className="govuk-radios__input"
                          id="street-manager-notification-on"
                          name="street-manager-notification-on"
                          onChange={[Function]}
                          type="radio"
                          value="true"
                        />
                        <label
                          className="govuk-label govuk-radios__label"
                          htmlFor="street-manager-notification-on"
                        >
                          On
                        </label>
                      </div>
                      <div
                        className="govuk-radios__item"
                      >
                        <input
                          checked={true}
                          className="govuk-radios__input"
                          id="street-manager-notification-off"
                          name="street-manager-notification-off"
                          onChange={[Function]}
                          type="radio"
                          value="false"
                        />
                        <label
                          className="govuk-label govuk-radios__label"
                          htmlFor="street-manager-notification-off"
                        >
                          Off
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="govuk-form-group"
              >
                <div
                  className=""
                >
                  <div
                    className="flex flex-row items-center"
                  >
                    <p
                      className="font-bold mr-28"
                    >
                      Disruptions requiring approval
                    </p>
                    <div
                      className="govuk-radios govuk-radios--inline ml-auto"
                      data-module="govuk-radios"
                    >
                      <div
                        className="govuk-radios__item"
                      >
                        <input
                          className="govuk-radios__input"
                          id="disruption-approval-email-notification-on"
                          name="disruption-approval-email-notification-on"
                          onChange={[Function]}
                          type="radio"
                          value="true"
                        />
                        <label
                          className="govuk-label govuk-radios__label"
                          htmlFor="disruption-approval-email-notification-on"
                        >
                          On
                        </label>
                      </div>
                      <div
                        className="govuk-radios__item"
                      >
                        <input
                          checked={true}
                          className="govuk-radios__input"
                          id="disruption-approval-email-notification-off"
                          name="disruption-approval-email-notification-off"
                          onChange={[Function]}
                          type="radio"
                          value="false"
                        />
                        <label
                          className="govuk-label govuk-radios__label"
                          htmlFor="disruption-approval-email-notification-off"
                        >
                          Off
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <h2
              className="govuk-heading-m"
            >
              From which source shall we acquire your data
            </h2>
            <div
              className="govuk-form-group"
            >
              <div
                className=""
              >
                <table
                  className="govuk-table"
                >
                  <thead
                    className="govuk-table__head"
                  >
                    <tr
                      className="govuk-table__row"
                    />
                  </thead>
                  <tbody
                    className="govuk-table__body"
                  >
                    <tr
                      className="govuk-table__row"
                    >
                      <th
                        className="govuk-table__header align-middle"
                        scope="row"
                      >
                        Bus
                      </th>
                      <td
                        className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                      >
                        <div
                          className="govuk-radios govuk-radios--inline"
                          data-module="govuk-radios"
                        >
                          <div
                            className="govuk-radios__item"
                          >
                            <input
                              checked={false}
                              className="govuk-radios__input"
                              id="bus-tnds"
                              name="bus-group"
                              onChange={[Function]}
                              type="radio"
                              value="tnds"
                            />
                            <label
                              className="govuk-label govuk-radios__label"
                              htmlFor="bus-tnds"
                            >
                              TNDS
                            </label>
                          </div>
                          <div
                            className="govuk-radios__item"
                          >
                            <input
                              checked={true}
                              className="govuk-radios__input"
                              id="bus-bods"
                              name="bus-group"
                              onChange={[Function]}
                              type="radio"
                              value="bods"
                            />
                            <label
                              className="govuk-label govuk-radios__label"
                              htmlFor="bus-bods"
                            >
                              BODS
                            </label>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr
                      className="govuk-table__row"
                    >
                      <th
                        className="govuk-table__header align-middle"
                        scope="row"
                      >
                        Tram
                      </th>
                      <td
                        className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                      >
                        <div
                          className="govuk-radios govuk-radios--inline"
                          data-module="govuk-radios"
                        >
                          <div
                            className="govuk-radios__item"
                          >
                            <input
                              checked={true}
                              className="govuk-radios__input"
                              id="tram-tnds"
                              name="tram-group"
                              onChange={[Function]}
                              type="radio"
                              value="tnds"
                            />
                            <label
                              className="govuk-label govuk-radios__label"
                              htmlFor="tram-tnds"
                            >
                              TNDS
                            </label>
                          </div>
                          <div
                            className="govuk-radios__item"
                          >
                            <input
                              checked={false}
                              className="govuk-radios__input"
                              id="tram-bods"
                              name="tram-group"
                              onChange={[Function]}
                              type="radio"
                              value="bods"
                            />
                            <label
                              className="govuk-label govuk-radios__label"
                              htmlFor="tram-bods"
                            >
                              BODS
                            </label>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr
                      className="govuk-table__row"
                    >
                      <th
                        className="govuk-table__header align-middle"
                        scope="row"
                      >
                        Ferry
                      </th>
                      <td
                        className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                      >
                        <div
                          className="govuk-radios govuk-radios--inline"
                          data-module="govuk-radios"
                        >
                          <div
                            className="govuk-radios__item"
                          >
                            <input
                              checked={true}
                              className="govuk-radios__input"
                              id="ferryService-tnds"
                              name="ferryService-group"
                              onChange={[Function]}
                              type="radio"
                              value="tnds"
                            />
                            <label
                              className="govuk-label govuk-radios__label"
                              htmlFor="ferryService-tnds"
                            >
                              TNDS
                            </label>
                          </div>
                          <div
                            className="govuk-radios__item"
                          >
                            <input
                              checked={false}
                              className="govuk-radios__input"
                              id="ferryService-bods"
                              name="ferryService-group"
                              onChange={[Function]}
                              type="radio"
                              value="bods"
                            />
                            <label
                              className="govuk-label govuk-radios__label"
                              htmlFor="ferryService-bods"
                            >
                              BODS
                            </label>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr
                      className="govuk-table__row"
                    >
                      <th
                        className="govuk-table__header align-middle"
                        scope="row"
                      >
                        Rail
                      </th>
                      <td
                        className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                      >
                        <div
                          className="govuk-radios govuk-radios--inline"
                          data-module="govuk-radios"
                        >
                          <div
                            className="govuk-radios__item"
                          >
                            <input
                              checked={true}
                              className="govuk-radios__input"
                              id="rail-tnds"
                              name="rail-group"
                              onChange={[Function]}
                              type="radio"
                              value="tnds"
                            />
                            <label
                              className="govuk-label govuk-radios__label"
                              htmlFor="rail-tnds"
                            >
                              TNDS
                            </label>
                          </div>
                          <div
                            className="govuk-radios__item"
                          >
                            <input
                              checked={false}
                              className="govuk-radios__input"
                              id="rail-bods"
                              name="rail-group"
                              onChange={[Function]}
                              type="radio"
                              value="bods"
                            />
                            <label
                              className="govuk-label govuk-radios__label"
                              htmlFor="rail-bods"
                            >
                              BODS
                            </label>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr
                      className="govuk-table__row"
                    >
                      <th
                        className="govuk-table__header align-middle"
                        scope="row"
                      >
                        Underground
                      </th>
                      <td
                        className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                      >
                        <div
                          className="govuk-radios govuk-radios--inline"
                          data-module="govuk-radios"
                        >
                          <div
                            className="govuk-radios__item"
                          >
                            <input
                              checked={true}
                              className="govuk-radios__input"
                              id="underground-tnds"
                              name="underground-group"
                              onChange={[Function]}
                              type="radio"
                              value="tnds"
                            />
                            <label
                              className="govuk-label govuk-radios__label"
                              htmlFor="underground-tnds"
                            >
                              TNDS
                            </label>
                          </div>
                          <div
                            className="govuk-radios__item"
                          >
                            <input
                              checked={false}
                              className="govuk-radios__input"
                              id="underground-bods"
                              name="underground-group"
                              onChange={[Function]}
                              type="radio"
                              value="bods"
                            />
                            <label
                              className="govuk-label govuk-radios__label"
                              htmlFor="underground-bods"
                            >
                              BODS
                            </label>
                          </div>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <div>
      <h2
        className="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        className="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link:
         
        <a
          className="govuk-link govuk-!-font-size-19"
          href="/contact"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          Contact us
        </a>
      </p>
    </div>
  </div>,
  <footer
    className="govuk-footer"
    role="contentinfo"
  >
    <div
      className="govuk-width-container"
    >
      <div
        className="govuk-footer__meta"
      >
        <div
          className="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            className="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            className="govuk-footer__inline-list"
          >
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Help
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/cookies"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Cookies
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Contact
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/accessibility"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Accessibility
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Terms and conditions
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/privacy"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            className="govuk-footer__body"
          >
            Built by the
             
            <a
              className="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            className="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            className="govuk-footer__licence-description"
          >
            All content is available under the
             
            <a
              className="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          className="govuk-footer__meta-item"
        >
          <a
            className="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>,
]
`;

exports[`accountSettings > should render correctly for publisher user 1`] = `
[
  <div
    className="app-phase-banner__wrapper"
  >
    <div
      className="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        className="govuk-phase-banner__content"
      >
        <strong
          className="govuk-tag govuk-phase-banner__content__tag"
        >
          beta
        </strong>
        <span
          className="govuk-phase-banner__text"
        >
          This is a new service – your
           
          <a
            className="govuk-link"
            href="/feedback"
            id="feedback-link"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            feedback
          </a>
           
          will help us to improve it.
        </span>
      </p>
    </div>
  </div>,
  <div
    className="govuk-width-container"
  >
    <button
      className="govuk-back-link mb-7"
      onClick={[Function]}
      type="button"
    >
      Back
    </button>
    <main
      className="govuk-main-wrapper"
      id="main-content"
    >
      <div
        className="govuk-grid-row"
      >
        <div
          className="govuk-grid-column-two-thirds"
        >
          <div
            className="govuk-form-group"
          >
            <h1
              className="govuk-heading-l"
            >
              Account settings
            </h1>
            <table
              className="govuk-table"
            >
              <thead
                className="govuk-table__head"
              >
                <tr
                  className="govuk-table__row"
                />
              </thead>
              <tbody
                className="govuk-table__body"
              >
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle"
                    scope="row"
                  >
                    Email address
                  </th>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  >
                    test@example.com
                  </td>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                </tr>
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle"
                    scope="row"
                  >
                    Password
                  </th>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  >
                    <input
                      className="bg-white"
                      disabled={true}
                      id="password"
                      name="password"
                      type="password"
                      value="myPassword"
                    />
                  </td>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  >
                    <a
                      className="govuk-link"
                      href="/change-password"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onTouchStart={[Function]}
                    >
                      Change
                    </a>
                  </td>
                </tr>
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle"
                    scope="row"
                  >
                    Organisation
                  </th>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  >
                    Test Org
                  </td>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                </tr>
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle"
                    scope="row"
                  >
                    NaPTAN Adminarea
                  </th>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                </tr>
              </tbody>
            </table>
            <div
              className="mb-12"
            >
              <h2
                className="govuk-heading-m"
              >
                Email Notifications
              </h2>
              <div
                className="govuk-form-group"
              >
                <div
                  className=""
                >
                  <div
                    className="flex flex-row items-center"
                  >
                    <p
                      className="font-bold mr-28"
                    >
                      Street manager roadworks
                    </p>
                    <div
                      className="govuk-radios govuk-radios--inline ml-auto"
                      data-module="govuk-radios"
                    >
                      <div
                        className="govuk-radios__item"
                      >
                        <input
                          className="govuk-radios__input"
                          id="street-manager-notification-on"
                          name="street-manager-notification-on"
                          onChange={[Function]}
                          type="radio"
                          value="true"
                        />
                        <label
                          className="govuk-label govuk-radios__label"
                          htmlFor="street-manager-notification-on"
                        >
                          On
                        </label>
                      </div>
                      <div
                        className="govuk-radios__item"
                      >
                        <input
                          checked={true}
                          className="govuk-radios__input"
                          id="street-manager-notification-off"
                          name="street-manager-notification-off"
                          onChange={[Function]}
                          type="radio"
                          value="false"
                        />
                        <label
                          className="govuk-label govuk-radios__label"
                          htmlFor="street-manager-notification-off"
                        >
                          Off
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <div>
      <h2
        className="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        className="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link:
         
        <a
          className="govuk-link govuk-!-font-size-19"
          href="/contact"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          Contact us
        </a>
      </p>
    </div>
  </div>,
  <footer
    className="govuk-footer"
    role="contentinfo"
  >
    <div
      className="govuk-width-container"
    >
      <div
        className="govuk-footer__meta"
      >
        <div
          className="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            className="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            className="govuk-footer__inline-list"
          >
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Help
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/cookies"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Cookies
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Contact
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/accessibility"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Accessibility
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Terms and conditions
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/privacy"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            className="govuk-footer__body"
          >
            Built by the
             
            <a
              className="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            className="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            className="govuk-footer__licence-description"
          >
            All content is available under the
             
            <a
              className="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          className="govuk-footer__meta-item"
        >
          <a
            className="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>,
]
`;

exports[`accountSettings > should render correctly for staff user 1`] = `
[
  <div
    className="app-phase-banner__wrapper"
  >
    <div
      className="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        className="govuk-phase-banner__content"
      >
        <strong
          className="govuk-tag govuk-phase-banner__content__tag"
        >
          beta
        </strong>
        <span
          className="govuk-phase-banner__text"
        >
          This is a new service – your
           
          <a
            className="govuk-link"
            href="/feedback"
            id="feedback-link"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            feedback
          </a>
           
          will help us to improve it.
        </span>
      </p>
    </div>
  </div>,
  <div
    className="govuk-width-container"
  >
    <button
      className="govuk-back-link mb-7"
      onClick={[Function]}
      type="button"
    >
      Back
    </button>
    <main
      className="govuk-main-wrapper"
      id="main-content"
    >
      <div
        className="govuk-grid-row"
      >
        <div
          className="govuk-grid-column-two-thirds"
        >
          <div
            className="govuk-form-group"
          >
            <h1
              className="govuk-heading-l"
            >
              Account settings
            </h1>
            <table
              className="govuk-table"
            >
              <thead
                className="govuk-table__head"
              >
                <tr
                  className="govuk-table__row"
                />
              </thead>
              <tbody
                className="govuk-table__body"
              >
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle"
                    scope="row"
                  >
                    Email address
                  </th>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  >
                    test@example.com
                  </td>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                </tr>
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle"
                    scope="row"
                  >
                    Password
                  </th>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  >
                    <input
                      className="bg-white"
                      disabled={true}
                      id="password"
                      name="password"
                      type="password"
                      value="myPassword"
                    />
                  </td>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  >
                    <a
                      className="govuk-link"
                      href="/change-password"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onTouchStart={[Function]}
                    >
                      Change
                    </a>
                  </td>
                </tr>
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle"
                    scope="row"
                  >
                    Organisation
                  </th>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  >
                    Test Org
                  </td>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                </tr>
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle"
                    scope="row"
                  >
                    NaPTAN Adminarea
                  </th>
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                  <td
                    className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                </tr>
              </tbody>
            </table>
            <div
              className="mb-12"
            >
              <h2
                className="govuk-heading-m"
              >
                Email Notifications
              </h2>
              <div
                className="govuk-form-group"
              >
                <div
                  className=""
                >
                  <div
                    className="flex flex-row items-center"
                  >
                    <p
                      className="font-bold mr-28"
                    >
                      Street manager roadworks
                    </p>
                    <div
                      className="govuk-radios govuk-radios--inline ml-auto"
                      data-module="govuk-radios"
                    >
                      <div
                        className="govuk-radios__item"
                      >
                        <input
                          className="govuk-radios__input"
                          id="street-manager-notification-on"
                          name="street-manager-notification-on"
                          onChange={[Function]}
                          type="radio"
                          value="true"
                        />
                        <label
                          className="govuk-label govuk-radios__label"
                          htmlFor="street-manager-notification-on"
                        >
                          On
                        </label>
                      </div>
                      <div
                        className="govuk-radios__item"
                      >
                        <input
                          checked={true}
                          className="govuk-radios__input"
                          id="street-manager-notification-off"
                          name="street-manager-notification-off"
                          onChange={[Function]}
                          type="radio"
                          value="false"
                        />
                        <label
                          className="govuk-label govuk-radios__label"
                          htmlFor="street-manager-notification-off"
                        >
                          Off
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <div>
      <h2
        className="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        className="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link:
         
        <a
          className="govuk-link govuk-!-font-size-19"
          href="/contact"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          Contact us
        </a>
      </p>
    </div>
  </div>,
  <footer
    className="govuk-footer"
    role="contentinfo"
  >
    <div
      className="govuk-width-container"
    >
      <div
        className="govuk-footer__meta"
      >
        <div
          className="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            className="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            className="govuk-footer__inline-list"
          >
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Help
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/cookies"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Cookies
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Contact
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/accessibility"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Accessibility
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Terms and conditions
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/privacy"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            className="govuk-footer__body"
          >
            Built by the
             
            <a
              className="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            className="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            className="govuk-footer__licence-description"
          >
            All content is available under the
             
            <a
              className="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          className="govuk-footer__meta-item"
        >
          <a
            className="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>,
]
`;
